RESOLVED FIXED315613
Zooming with scroll snap can trigger infinite recursion
https://bugs.webkit.org/show_bug.cgi?id=315613
Summary Zooming with scroll snap can trigger infinite recursion
Simon Fraser (smfr)
Reported 2026-05-26 16:22:21 PDT
Zooming with Command-+ on https://codepen.io/waterplea/pen/XJjzrQW can trigger a crash because of recursion.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-05-26 16:22:26 PDT
Simon Fraser (smfr)
Comment 2 2026-05-26 16:32:32 PDT
EWS
Comment 3 2026-05-27 08:43:44 PDT
Committed 313972@main (1aba36b70ea1): <https://commits.webkit.org/313972@main> Reviewed commits have been landed. Closing PR #65728 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.