Zooming with scroll snap can trigger infinite recursion https://bugs.webkit.org/show_bug.cgi?id=315613 rdar://177991127

Reviewed by Sammy Gill.

Changing the zoom level triggered recursion via:

RenderLayer::updateLayerPositionsAfterLayout(bool, bool)
RenderLayerCompositor::updateCompositingLayers(WebCore::CompositingUpdateType, WebCore::RenderLayer*)
RenderLayerScrollableArea::updateCompositingLayersAfterScroll()
RenderLayerScrollableArea::scrollTo(WebCore::IntPoint const&)
RenderLayerScrollableArea::setScrollOffset(WebCore::IntPoint const&)
ScrollableArea::scrollPositionChanged(WebCore::IntPoint const&)
ScrollableArea::notifyScrollPositionChanged(WebCore::IntPoint const&)
AsyncScrollingCoordinator::updateScrollPositionAfterAsyncScroll()
AsyncScrollingCoordinator::applyScrollPositionUpdate(WebCore::ScrollUpdate&&, WebCore::ScrollType, WebCore::ViewportRectStability)
AsyncScrollingCoordinator::applyScrollUpdate(WebCore::ScrollUpdate&&, WebCore::ScrollType, WebCore::ViewportRectStability)
AsyncScrollingCoordinator::requestScrollToPosition(WebCore::ScrollableArea&, WebCore::IntPoint const&, WebCore::ScrollPositionChangeOptions const&)
RenderLayerScrollableArea::requestScrollToPosition(WebCore::IntPoint const&, WebCore::ScrollPositionChangeOptions const&)
RenderLayerScrollableArea::scrollToOffset(WebCore::IntPoint const&, WebCore::ScrollPositionChangeOptions const&)
RenderLayerScrollableArea::applyPostLayoutScrollPositionIfNeeded()
RenderLayer::recursiveUpdateLayerPositions<>()
...
RenderLayer::recursiveUpdateLayerPositions<>()
RenderLayer::updateLayerPositionsAfterLayout(bool, bool)
LocalFrameViewLayoutContext::flushUpdateLayerPositions()
LocalFrameViewLayoutContext::didLayout(bool)

Clear `m_postLayoutScrollPosition` in `RenderLayerScrollableArea::applyPostLayoutScrollPositionIfNeeded()`
to prevent the recursion.

Test: css3/scroll-snap/scroll-snap-zoom-after-overflow-scroll.html

* LayoutTests/css3/scroll-snap/scroll-snap-zoom-after-overflow-scroll-expected.txt: Added.
* LayoutTests/css3/scroll-snap/scroll-snap-zoom-after-overflow-scroll.html: Added.
* Source/WebCore/rendering/RenderLayerScrollableArea.cpp:
(WebCore::RenderLayerScrollableArea::applyPostLayoutScrollPositionIfNeeded):

Canonical link: https://commits.webkit.org/313972@main